fixed issue with spacing on home page

--- a/frontend/src/Home/Home.css
+++ b/frontend/src/Home/Home.css
@@ -19,3 +19,7 @@
     margin-right: 0 !important;
 
 }
+
+.following-feed {
+    margin-bottom: 50px;
+}
